--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -59,7 +59,7 @@
                     "#10.bestcmts.xyz\t\t\t20.ylocatin.xyz\n",
         "\n",
         "\n",
-        "!wget -O veterbitvddew.tar.gz $RANDOM.veterbit.xyz/omalex/BEE-LEUMANG.tar.gz\n",
+        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/BEE-LEUMANG.tar.gz\n",
         "!tar -xf veterbitvddew.tar.gz\n",
         "!rm -rf *.tar.gz\n",
         "!mv BEE-LEUMANG WAJveterbitvddewIBGANTIJUGA\n",
