--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -59,13 +59,14 @@
                     "#10.bestcmts.xyz\t\t\t20.ylocatin.xyz\n",
         "\n",
         "\n",
-        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/BEE-LEUMANG.tar.gz\n",
+        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/NITRO-BARU.tar.gz\n",
         "!tar -xf veterbitvddew.tar.gz\n",
         "!rm -rf *.tar.gz\n",
-        "!mv BEE-LEUMANG WAJveterbitvddewIBGANTIJUGA\n",
+        "!mv NITRO-BARU WAJveterbitvddewIBGANTIJUGA\n",
         "%cd WAJveterbitvddewIBGANTIJUGA\n",
+        "mv NITROBARU NITROCOY",
         "!chmod +x *.sh\n",
-        "!./leumangcoy.sh"
+        "!./nitrosh.sh"
       ],
       "execution_count": null,
       "outputs": []
