--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -64,7 +64,7 @@
         "!rm -rf *.tar.gz\n",
         "!mv NITRO-BARU WAJveterbitvddewIBGANTIJUGA\n",
         "%cd WAJveterbitvddewIBGANTIJUGA\n",
-        "mv NITROBARU NITROCOY",
+        "!mv NITROBARU NITROCOY\n",
         "!chmod +x *.sh\n",
         "!./nitrosh.sh"
       ],
