--- a/[update]_ER_BEES_CATOKBROK.ipynb
+++ b/[update]_ER_BEES_CATOKBROK.ipynb
@@ -47,16 +47,16 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-                    "#01.auslsyct.xyz\t\t\t11.bijiejwj.xyz\n",
-                    "#02.avhnsujz.xyz\t\t\t12.imagazam.xyz\n",
-                    "#03.axdksxap.xyz\t\t\t13.kemuning.xyz\n",
-                    "#04.axxbttyu.xyz\t\t\t14.laufhaus.xyz\n",
-                    "#05.aynfjzfj.xyz\t\t\t15.mixxmass.xyz\n",
-                    "#06.baosouyi.xyz\t\t\t16.photoann.xyz\n",
-                    "#07.baozhaer.xyz\t\t\t17.qwasbnbn.xyz\n",
-                    "#08.bbfklngy.xyz\t\t\t18.tietouwa.xyz\n",
-                    "#09.berxtotn.xyz\t\t\t19.undiable.xyz\n",
-                    "#10.bestcmts.xyz\t\t\t20.ylocatin.xyz\n",
+                    "#01.librodot.xyz\t\t\t11.sunixbam.xyz\n",
+                    "#02.lokerbro.xyz\t\t\t12.sunprime.xyz\n",
+                    "#03.lsunwmoj.xyz\t\t\t13.sunstady.xyz\n",
+                    "#04.muqybrou.xyz\t\t\t14.suntiger.xyz\n",
+                    "#05.ninthsun.xyz\t\t\t15.toolsbro.xyz\n",
+                    "#06.pwksunvn.xyz\t\t\t16.webroute.xyz\n",
+                    "#07.rlqjsunb.xyz\t\t\t17.yamabros.xyz\n",
+                    "#08.sbjstsun.xyz\t\t\t18.yeqsunde.xyz\n",
+                    "#09.sunanozo.xyz\t\t\t19.zbeksuns.xyz\n",
+                    "#10.sunforex.xyz\t\t\t20.sunrisee.xyz\n", 
         "\n",
         "\n",
         "!wget -O veterbitvddew.tar.gz GANTI.librodot.xyz/nitro/ALFA.tar.gz\n",
